--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+	--orange: hsl(25, 97%, 53%);
+	--orange-raw: 25, 97%, 53%;
+
+	--white: hsl(0, 0%, 100%);
+	--light-grey: hsl(217, 12%, 63%);
+	--medium-grey: hsl(216, 12%, 54%);
+	--dark-blue: hsl(213, 19%, 18%);
+	--v-dark-blue: hsl(216, 12%, 8%);
+
+	--faded-blue: hsl(216, 12%, 12%);
+	--faded-blue-raw: 216, 12%, 12%;
+
+	--box-shadow: hsla(0, 0%, 0%, 0.239);
+
+	--primary-gap: 1em;
+	--primary-gap-2x: calc(var(--primary-gap) * 2);
+
+	--border-radius: 1em;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	width: 100%;
+	min-height: 100vh;
+	font-family: "Overpass", sans-serif;
+	background: var(--v-dark-blue);
+	color: var(--white);
+}
+
+#root {
+	width: inherit;
+	min-height: inherit;
+	padding: var(--primary-gap-2x);
+	display: grid;
+	place-items: center;
+}
+img {
+	max-width: 100%;
+	height: auto;
+	user-select: none;
 }
