--- a/src/components/GetRating/RatingButtons/RatingButtons.css
+++ b/src/components/GetRating/RatingButtons/RatingButtons.css
@@ -9,7 +9,8 @@
 	flex-basis: 3.5em;
 	height: 3.5em;
 	aspect-ratio: 1;
-	font-weight: 500;
+	font-weight: 600;
+	font-family: inherit;
 	color: var(--medium-grey);
 	background: var(--faded-blue);
 	border: 0;
