--- a/src/components/GetRating/SubmitButton/SubmitButton.css
+++ b/src/components/GetRating/SubmitButton/SubmitButton.css
@@ -6,7 +6,8 @@
 	border-radius: 10em;
 	font-size: 1rem;
 	color: white;
-	font-weight: 500;
+	font-weight: 600;
+	font-family: inherit;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
 	background: var(--orange);
